Fixing modal z-index

--- a/src/assets/scss/site.scss
+++ b/src/assets/scss/site.scss
@@ -140,12 +140,15 @@ body {
 .sticky-top {
   position: sticky;
   top: 0;
-  z-index: 99;
+  z-index: 98;
 }
 
-.modal-content {
-  .box {
-    max-height: 100%;
-    overflow-y: auto;
+.modal-background {
+  z-index: 99;
+  .modal-content {
+    .box {
+      max-height: 100%;
+      overflow-y: auto;
+    }
   }
 }
